--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,138 @@
   --light-peach: #EEE1D1;
   --lavender: #F5F0F8;
 }
+/*  */
+
+.navigation-burger {
+  position: absolute;
+  right: 10px;
+  top: 10px
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px; 
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; 
+  z-index: 2; 
+  
+  -webkit-touch-callout: none;
+}
+
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  /* width: 300px; */
+  right: -300px;
+  /* margin: -100px 0 0 -50px; */
+  /* padding: 50px; */
+  /* padding-top: 125px; */
+  
+  background: white;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+/*  */
 
 body {
   font-family: "Onest", sans-serif;
@@ -92,6 +224,7 @@ body {
 .header__inner {
   background: linear-gradient(242deg, rgba(234, 213, 191, 0.04) 75.64%, rgba(237, 152, 239, 0.16) 91.35%), linear-gradient(105deg, rgba(252, 225, 179, 0.70) -0.66%, rgba(116, 135, 201, 0.80) 59.31%, #1A254C 100%);
   border-radius: 20px;
+  position: relative;
 }
 
 .menu {
@@ -237,7 +370,7 @@ body {
 }
 
 .video:hover .video__link::before {
-  transform: rotate(360deg) scale(1.1);
+  transform: scale(1.1);
 }
 
 .video:hover::before {
@@ -642,7 +775,7 @@ body {
 }
 
 .cashback__video:hover .cashback__link::before {
-  transform: translateX(-50%) rotate(360deg);
+  transform: translateX(-50%) scale(1.1);
 }
 
 .cashback__list {
